# codo-artifact

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  compail.sh  makefile  run_ae.sh
Docker/: Dockerfile.ae
experiments/: merge_results.sh  run_all.sh
experiments/fig-11/: extract_rpt_metrics.py  run_hls.sh
experiments/fig-11/1/: main_graph_csynth.rpt  resnet18.cpp  resnet18.tcl
experiments/fig-11/16/: main_graph_csynth.rpt  resnet18.cpp  resnet18.tcl
experiments/fig-11/2/: main_graph_csynth.rpt  resnet18.cpp  resnet18.tcl
experiments/fig-11/32/: resnet18.cpp  (+1 more)
experiments/table-2/: add_tcl_preamble.py  batch_extract_rpt_metrics.py  extract_rpt_metrics.py  run_codo.sh  run_syn.sh
experiments/table-3_and_table-4/: batch_extract_rpt_metrics.py  replace_float_with_int8_t.py  run_ae.sh  run_hls.sh
experiments/verify/: data.py  fix_testbench.py  gen_mlir_designs.py  utils.py
include/: CMakeLists.txt
include/codo/: CMakeLists.txt  Init_All_Dialects.h
include/codo-c/: Dialects.h  codoTypes.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/Dialect/: CMakeLists.txt  CodoDialect.cpp  CodoOps.cpp
lib/Support/: CMakeLists.txt  Utils.cpp
lib/Transforms/: CMakeLists.txt  DesignSpaceExplore.cpp  Passes.cpp  config copy.json  config.json
lib/Translation/: CMakeLists.txt  EmitVitisHLS.cpp  EmitVitisHLS_origin.cpp  EmitVitisHLS_palm_modify.cpp  EmitVitisHost.cpp  EmitVppLink.cpp  Utils.cpp
tools/: CMakeLists.txt
tools/codo-opt/: CMakeLists.txt  codo-opt.cpp
tools/codo-translate/: CMakeLists.txt  codo-translate.cpp
(+324 files in other folders)
